--- a/demo/css/login.css
+++ b/demo/css/login.css
@@ -26,3 +26,16 @@
     margin:10px 60px;
     width:150px;
 }
+.alertBox{
+    position: absolute;
+    top:10px;
+    width:100%;
+}
+.alertBox div{
+    width:50%;
+    margin: 0 auto;
+}
+.alert{
+    display: none;
+    text-align: center;
+}
