--- a/demo/css/adminStudent.css
+++ b/demo/css/adminStudent.css
@@ -12,3 +12,16 @@ th,td{
 .add{
     text-align: center;
 }
+.alertBox{
+    position: absolute;
+    top:10px;
+    width:100%;
+}
+.alertBox div{
+    width:50%;
+    margin: 0 auto;
+}
+.alert{
+    display: none;
+    text-align: center;
+}
