--- a/demo/css/tongzhi.css
+++ b/demo/css/tongzhi.css
@@ -5,5 +5,6 @@
     width: 1200px;
     height: 800px;
     margin: 0 auto 0;
-    border: 1px sloid red;
+    border: 1px solid red;
+    padding: 20px 50px;
 }
