--- a/demo/css/lianxi.css
+++ b/demo/css/lianxi.css
@@ -19,3 +19,13 @@ p{
 .content{
    margin-top:100px;
 }
+.content-box{
+    width:1200px;
+    height:300px;
+    border:1px solid black;
+    display: none;
+}
+.content-dev{
+    width: 1200px;
+    height:200px;
+}
