--- a/demo/css/adminMessage.css
+++ b/demo/css/adminMessage.css
@@ -4,6 +4,9 @@
     display: flex;
     justify-content: space-around;
 }
+.content div{
+    width:500px;
+}
 .form{
     width:100%;
     margin-top:30px;
