--- a/demo/css/login.css
+++ b/demo/css/login.css
@@ -7,7 +7,7 @@
     height: 100vh;
     justify-content: center;
     align-items: center;
-    background-image: url('../img/login/login1.jpg');
+    background-image: url(../images/login1.jpg);
     background-size: cover;
 }
 .form{
