--- a/demo/css/tongzhi.css
+++ b/demo/css/tongzhi.css
@@ -1,10 +1,7 @@
-.banjitongzhi{
-    background-color:brown;
-}
 .tongzhi{
     width: 1200px;
     height: 800px;
     margin: 0 auto 0;
-    border: 1px solid red;
+    border: 1px solid silver;
     padding: 20px 50px;
 }
