--- a/demo/css/zuoye.css
+++ b/demo/css/zuoye.css
@@ -1,9 +1,6 @@
-.banjizuoye{
-    background-color:brown;
-}
 .zuoye{
     width: 1200px;
     height: 800px;
     margin: 0 auto 0;
-    border: 1px solid red;
+    border: 1px solid silver;
 }
